Added more tests and deleted WildFly files